implemented yarn with dependences and .vue files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/lifenet
+spring.datasource.url=jdbc:postgresql://localhost/lifenet
 spring.datasource.username=${dataBaseUserName}
 spring.datasource.password=${dataBasePassword}
 spring.jpa.generate-ddl=true
