--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 HELP.md
-.gradle
-node_modules
+
 yarn-error.log
+node_modules
+
+### Gradle ###
+.gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
+.gradletasknamecache
+
 !**/src/main/**
 !**/src/test/**
 
