--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,21 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.postgresql:postgresql')
-    compile('org.springframework.session:spring-session-jdbc')
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-    compileOnly 'org.projectlombok:lombok'
-    compile 'org.springframework.boot:spring-boot-starter-security'
-    compile 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.0.RELEASE'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.projectlombok:lombok'
+
+    compile'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile'org.springframework.boot:spring-boot-starter-security'
+    compile"org.springframework.boot:spring-boot-starter-thymeleaf"
+    compile"org.springframework.boot:spring-boot-starter-websocket"
+    compile'org.springframework.boot:spring-boot-starter-security'
+    compile'org.springframework.session:spring-session-jdbc'
+    compile'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.0.RELEASE'
+    compile'org.postgresql:postgresql'
+
+    compileOnly'org.projectlombok:lombok'
+
+    developmentOnly'org.springframework.boot:spring-boot-devtools'
+
+    annotationProcessor'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
